2010-11-08 Rodrigo Rivas Costa <rodrigorivascosta@gmail.com>

	* tlssup.c (__dyn_tls_init): Use an integer variable to iterate between
	__xd_a and __xd_z.

2010-08-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* include/limits.h (PATH_MAX): Make it agree with Microsoft's
	semantically identical MAX_PATH; correct value is 260.

2010-07-25  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Accept that mingwrt headers are not guaranteed to precede GCC's in the
	system include search path; (issue reported by Mark Brand).

	* include/float.h: Add multiple inclusion guard around...
	[! defined _FLOAT_H___]: ...include_next <float.h> for GCC's version,
	only when this define does not indicate that it has already been seen;
	update comments to document rationale; move it within the scope of...
	[! defined _MINGW_FLOAT_H_]: ...this multiple inclusion guard, so that
	GCC's float.h, after an appropriate complementary modification, need
	not perform a further include path search when this implementation
	specific extension has already been processed.

2010-07-22  Ozkan Sezer  <sezero@users.sourceforge.net>

	* include/io.h (_findfirst, _findnext, _findclose, _findfirst32,
	_findnext32, _findfirsti64, _findnexti64, _findfirst32i64, _findfirst64i32,
	_findnext32i64, _findnext64i32, _findnext64, _findfirst, _findnext,
	_findfirsti64, _findnexti64, _findfirst, _findnext, _findfirsti64,
	_findnexti64): Correct definition.

2010-04-27 Danny Smith <dannysmith@users.sourceforge.net>

	* mingwex/mb_wc_common.h (get_codepage): Revert change of 2006-09-19.

2010-03-06 Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* include/_mingw.h: Increment version to 3.18.

2010-03-02  Daniel Atallah <datallah@users.sourceforge.net>

	* include/stdio.h: (_vscprintf, _vscwprintf)
	* include/tchar.h: (_vsctprintf)
	
2010-02-14  Roumen Petrov  <rumen@users.sourceforge.net>

	Issue [2134161]: time64 functions and types for msvcrt >= 8.0
	(initial implementation)
